--- a/app/src/main/res/layout/storage_tab_fragment.xml
+++ b/app/src/main/res/layout/storage_tab_fragment.xml
@@ -10,12 +10,32 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/storageList"
-            android:name="net.merayen.kitchentimer.fragments.common.SelectableList"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/storageList"
+                android:name="net.merayen.kitchentimer.fragments.common.SelectableList"
+                android:layout_width="200dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical" />
+            
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <Button
+                    android:id="@+id/newButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New" />
+
+            </FrameLayout>
+
+        </LinearLayout>
 
         <View
             android:id="@+id/divider4"
