--- a/app/src/main/res/layout/quicktimers_tab_fragment.xml
+++ b/app/src/main/res/layout/quicktimers_tab_fragment.xml
@@ -7,102 +7,66 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:orientation="horizontal">
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Denne skal vise greier" />
 
-		<LinearLayout
-			android:id="@+id/new_timer"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical">
+		<GridLayout
+			android:columnCount="3"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent">
 
-			<LinearLayout
+			<Button
+				android:id="@+id/add_hour"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:layout_weight="1">
+				android:text="+" />
 
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="0px"
-					android:layout_weight="1"
-					android:orientation="horizontal">
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textAlignment="center"
+				android:textSize="14pt"
+				android:text="24h" />
 
-					<LinearLayout
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:orientation="vertical"
-						android:layout_weight="1">
+			<Button
+				android:id="@+id/sub_hour"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="-" />
 
-						<Button
-							android:id="@+id/add_hour"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:text="+"
-							android:layout_weight="1"/>
+			<Button
+				android:id="@+id/add_minute"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="+" />
 
-						<TextView
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:textAlignment="center"
-							android:textSize="14pt"
-							android:layout_weight="1"
-							android:text="24h" />
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textAlignment="center"
+				android:textSize="14pt"
+				android:text="59m" />
 
-						<Button
-							android:id="@+id/sub_hour"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:layout_weight="1"
-							android:text="-" />
-
-					</LinearLayout>
-
-					<LinearLayout
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:orientation="vertical"
-						android:layout_weight="1">
-
-						<Button
-							android:id="@+id/add_minute"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:text="+" />
-
-						<TextView
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:textAlignment="center"
-							android:textSize="14pt"
-							android:text="59m" />
-
-						<Button
-							android:id="@+id/sub_minute"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:text="-" />
-
-					</LinearLayout>
-
-				</LinearLayout>
-
-			</LinearLayout>
+			<Button
+				android:id="@+id/sub_minute"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="-" />
 
 			<FrameLayout
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"/>
+				android:layout_height="wrap_content" />
 
 			<Button
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:text="Start"
-			android:layout_weight="1"/>
-		</LinearLayout>
+				android:text="Start" />
+		</GridLayout>
 	</LinearLayout>
+
 </FrameLayout>
