--- a/app/src/main/res/layout/fragment_running_timers_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="150dp"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
@@ -23,7 +23,7 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="5m 23s remaining" />
+            android:text="5m 23s" />
 
     </LinearLayout>
 
