--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/app_name"
-        android:textColor="#33b5e5"
+        android:textColor="#FFFFFF"
         android:textSize="50sp"
         android:textStyle="bold" />
 
