--- a/app/src/main/res/layout/quicktimers_tab_fragment.xml
+++ b/app/src/main/res/layout/quicktimers_tab_fragment.xml
@@ -12,8 +12,8 @@
 
 		<ScrollView
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="3">
+			android:layout_height="match_parent"
+			android:layout_weight="5">
 
 			<LinearLayout
 				android:id="@+id/presets"
